# cbor-codec

./: .gitlab-ci.yml  CHANGELOG.txt  Cargo.toml  README.asciidoc
benches/: lib.rs
src/: decoder.rs  encoder.rs  types.rs
tests/: lib.rs  unit.rs  util.rs
tests/properties/: value.rs
