[package]
name          = "cbor-codec"
version       = "0.7.1"
authors       = ["Toralf Wittner <tw@dtex.org>"]
license       = "MPL-2.0"
description   = "CBOR Codec implementation"
repository    = "https://gitlab.com/twittner/cbor-codec"
documentation = "https://twittner.gitlab.io/cbor-codec/cbor/"
keywords      = ["cbor", "encoding", "binary"]
categories    = ["encoding"]

[lib]
name = "cbor"

[features]
random = ["quickcheck"]

[dependencies]
byteorder = ">= 0.5.0"
libc      = ">  0.1.0"

[dependencies.quickcheck]
version  = ">= 0.2.21"
optional = true

[dev-dependencies]
json-codec        = ">= 0.3"
quickcheck        = ">= 0.2.21"
quickcheck_macros = ">= 0.2.21"
rand              = ">= 0.3"
rustc-serialize   = ">= 0.3"

[[test]]
name = "tests"
path = "tests/lib.rs"
